Fix to edge case UX bug where the user is logged in to SFMC but doesn’t have licence

--- a/docs/ssjs/snippets/sfmc-cloud-page-apps.mdx
+++ b/docs/ssjs/snippets/sfmc-cloud-page-apps.mdx
@@ -371,7 +371,7 @@ By considering all the above, we get a robust and secure template for our Cloud 
 
     /* ---------------------- 3.2. Authentication ---------------------------- */
 
-    } else if (state) {
+    } else if (state && !errorMessage) {
         /* 3.2.1. Build token request payload */
         var code = Platform.Request.GetQueryStringParameter('code');
         var payload = {
