Broken Link Fix

--- a/docs/sql/sfmc-sql-date-functions.mdx
+++ b/docs/sql/sfmc-sql-date-functions.mdx
@@ -31,7 +31,7 @@ You can get the datetime with appropriate offset information using the `SYSDATET
 
 You can see the 24-hour clock format and milliseconds and UTC-6 offset at the end. This last information will be helpful for timezone conversions with the [`AT TIME ZONE`](#at-time-zone) function.
 
-You can also leverage [`TODATETIMEOFFSET'](#at-time-zone-vs-todatetimeoffset) to work with standard `GETDATE`.
+You can also leverage [`TODATETIMEOFFSET`](#at-time-zone-vs-todatetimeoffset) to work with standard `GETDATE`.
 
 :::
 
