--- a/sites/toolset.mdx
+++ b/sites/toolset.mdx
@@ -10,7 +10,7 @@ import { LeadText } from '../src/components/LeadText.js';
 
 ## Operating System
 
-MacOS and Windows if needed (sorry Ubuntu, it wasn't working for me anymore).
+MacOS. Windows if needed. Sorry Ubuntu, it wasn't working for me anymore.
 
 ## Browser
 
