Updated draft of SFMC Licence Limits article

--- a/docs/config/sfmc-licence-limits.mdx
+++ b/docs/config/sfmc-licence-limits.mdx
@@ -107,10 +107,28 @@ When requesting the Super Message report you can ask for some specific data poin
 
 #### Super Message Usage Optimizations
 
+##### Data Quality
+
+The best way to optimise the SuperMessage usage is to focus on improving the data and segmentation. Do you really need those contacts that have not opened any email for over a year? Is there really value in pushing emails to temporary email addresses? Are you sure that the segment for that marketing email is „everyone opted in”?
+
+By trimming the data fat and creating more targeted segmentation you can easily lower the amount of contacts that will receive the communication. And that means less Super Messages burned for delivering messages with no ROI.
+
+But there is more! Improving the data quality of your segments will also mean that bigger percentage of the audience will interact with your more targeted message. This will improve your deliverability and help you get the message to the inbox when it really matters - making your Super Message spend work harder for you.
+
+On top of it, you will either way want to clean up your data to also optimise the [Contact](#contacts) licence limit.
+
+##### Channel Splitting
+
+Another option to optimise the spend is to optimise channels you are using. SMS channel is extremly costly - in most cases more than 20x the cost of email or push message. 
+
+Of course, there are scenarios where the SMS is the right channel for the message and that cost is worth it. But those are quite rare cases. Frequently you can easily optimise it by selecting the more frugal channel.
+
+For example, if a customer has an App installed - send a push message instead of SMS. If a customer (or you) doesn’t have an app, but there is email address available - send an email. And go for SMS only when mobile number is the only point of contact or when the message is crucial and previous methods didn’t trigger expected behaviour.
+
+
+
 1. Code Resources
 2. High Priority Journeys instead of High Priority Triggered Sends
-3. Segmentation
-4. Channel splitting
 5. Feature scrutiny (Interactive Form Block…)
 
 ### Contacts
