Website restructure with docs and snippets merge

--- a/docs/config/sfmc-licence-limits.mdx
+++ b/docs/config/sfmc-licence-limits.mdx
@@ -6,6 +6,7 @@ description: With great flexibility come great limitations. Learn how SFMC limit
 image: img/og/og-image-sfmc-licence-limits.png
 tags: [Marketing Cloud, Best Practice, Automation, API, Data Extensions, Setup]
 toc_max_heading_level: 4
+unlisted: true
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
@@ -125,7 +126,7 @@ On top of it, you will either way want to clean up your data to also optimise th
 
 ##### Channel Splitting
 
-Another option to optimise the spend is to optimise channels you are using. SMS channel is extremly costly - in most cases more than 20x the cost of email or push message. 
+Another option to optimise the spend is to optimise channels you are using. SMS channel is extremly costly - in most cases more than 20x the cost of email or push message.
 
 Of course, there are scenarios where the SMS is the right channel for the message and that cost is worth it. But those are quite rare cases. Frequently you can easily optimise it by selecting the more frugal channel.
 
