--- a/docs/docs-and-snippets.mdx
+++ b/docs/docs-and-snippets.mdx
@@ -119,7 +119,7 @@ To fully leverage the Salesforce Marketing Cloud Data Extensions and Automation 
 
 Many things in Salesforce Marketing Cloud aren't coding but have a massive impact on the code. Permissions. System Data Views. Configuration options. Here I focus on the most important ones that are crucial for Marketing Cloud developers.
 
-- [Licence Limits](./config/sfmc-licence-limits.mdx)
+{/* - [Licence Limits](./config/sfmc-licence-limits.mdx) */}
 - [System Data Views](./config/sfmc-system-data-views.mdx)
 - [Mobile Connect Data Views](./config/sfmc-mobile-connect-data-views.mdx)
 - [MCC Integration Patterns](./config/sfmc-mcc-integration-patterns.mdx)
