--- a/docs/ssjs/ssjs-wsproxy.mdx
+++ b/docs/ssjs/ssjs-wsproxy.mdx
@@ -1,7 +1,8 @@
 ---
-id: wsproxy
-title: WSProxy Basics
+id: ssjs-wsproxy
+title: SSJS WSProxy Basics
 draft: true
+unlitsted: true
 ---
 
 import Tabs from '@theme/Tabs';
