Marking SF Data in SFMC JB webinar recording as unlisted until recording is available

--- a/docs/webinars/sfmc-webinar-salesforce-data-in-journey-builder.mdx
+++ b/docs/webinars/sfmc-webinar-salesforce-data-in-journey-builder.mdx
@@ -5,6 +5,7 @@ sidebar_label: SF Data in Journey Builder
 description: Learn how to integrate and use Salesforce CRM data with SFMC Journey Builder. In both ways. The right way.
 image: img/og/og-image-webinar-salesforce-data-in-journey-builder.png
 tags: [Webinar, Marketing Cloud, Best Practice, AMPScript, CRM, Configuration, Data Management, Integration, Journey]
+unlisted: true
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
@@ -27,7 +28,6 @@ import { YouTube } from '../../src/components/VideoEmbed.js';
 
 <br/>
 
-
 :::note You Should Know
 
 During the webinar I mentioned the surprising behaviour of Salesforce Data Entry in terms of injection to a Journey based on [this Knowledge Article](https://help.salesforce.com/s/articleView?id=000381146&type=1).
@@ -44,7 +44,6 @@ True | True | False | __Not added to SFMC__
 True | False | True | __Not added to SFMC__
 
 :::
-
 
 ## Materials
 
